<resources>
    <string name="app_name">YM</string>
    <string name="set_update_init">修改信息</string>
    <string name="set_last_time">上次时间</string>
    <string name="set_duration">时长</string>
    <string name="set_cycle">周期</string>
    <string name="xingzuo_yunshi">运势</string>
    <string name="xingzuo_peidui">配对</string>
    <string name="baiyangzuo">白羊座</string>
    <string name="baiyang_t">3/21-4/19</string>
    <string name="jinniuzuo">金牛座</string>
    <string name="jinniu_t">4/20-5/20</string>
    <string name="shuangzizuo">双子座</string>
    <string name="shuangzi_t">5/21-6/21</string>
    <string name="juxiezuo">巨蟹座</string>
    <string name="juxie_t">6/22-7/22</string>
    <string name="shizizuo">狮子座</string>
    <string name="shizi_t">7/23-8/22</string>
    <string name="chunv_t">8/23-9/22</string>
    <string name="chunvzuo">处女座</string>
    <string name="tianping_t">9/23-10/23</string>
    <string name="tianpingzuo">天秤座</string>
    <string name="tianxie_t">10/24-11/22</string>
    <string name="tianxiezuo">天蝎座</string>
    <string name="sheshou_t">11/23-12-21</string>
    <string name="sheshouzuo">射手座</string>
    <string name="mojie_t">12/22-1/19</string>
    <string name="mojiezuo">摩羯座</string>
    <string name="shuiping_t">1/21-2/18</string>
    <string name="shuipingzuo">水瓶座</string>
    <string name="shuangyu_t">2/19-3/20</string>
    <string name="shuangyuzuo">双鱼座</string>
    <string name="yunshi_jintian">今天</string>
    <string name="yunshi_mingtian">明天</string>
    <string name="yunshi_benzhou">本周</string>
    <string name="yunshi_benyue">本月</string>
    <string name="yunshi_bennian">本年</string>
    <string name="yunshi_xingyunshuzi">幸运数字 :</string>
    <string name="yunshi_jiankangzhishu">健康指数 :</string>
    <string name="yunshi_xingyunyanse">幸运颜色 :</string>
    <string name="yunshi_guirenxingzuo">贵人星座 :</string>
    <string name="caiyunzhishu">财运指数 :</string>
    <string name="aiqingzhishu">爱情指数 :</string>
    <string name="zonghezhishu">综合指数 :</string>
    <string name="gongzuozhishu">工作指数 :</string>
    <string name="xingzuopeidui">星座配对</string>
    <string name="plese_select">请选择...</string>
    <string name="anquanqi">安全期</string>
    <string name="yuejingqi">月经期</string>
    <string name="painuanqi">排卵期</string>
    <string name="painuanri">排卵日</string>


</resources>
