<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="20dp">

        <Button
            android:id="@+id/bt_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_set_back" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/set_update_init"
            android:textSize="@dimen/main_tv_update_init_set" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_last_time" />

                <View
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />

                <EditText
                    android:id="@+id/et_last_time"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/bg_set_et" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_duration" />

                <View
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />

                <EditText
                    android:id="@+id/et_duration"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/bg_set_et" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_cycle" />

                <View
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />

                <EditText
                    android:id="@+id/et_cycle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/bg_set_et" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center">

            <Button
                android:id="@+id/bt_ok"
                android:layout_width="160dp"
                android:layout_height="45dp"
                android:background="@drawable/bg_set_btn_ok" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>